feat: implement PDF text extraction and OCR support using Tesseract and PDFBox